-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.7.2, Qt Creator 4.8.0-beta1
-
None
-
-
7ef2dccff806e0b32a99973fdf357f2ad6552f4c (qt-creator/qt-creator/4.8)
When changing cmake config files I have encounter with many crashes.
Somtime crash upon start when parsing cmake project.
I guess when I have no editor open, it helps.
Sometimes hunderds of warning in General message window:
C++ Indexer: Skipping file "/usr/include/AvailabilityInternal.h" becuase it is too big
- is duplicated by
-
QTCREATORBUG-21489 QtCreator freeze when loading cmake projects
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-21481 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 245682,3 | CppTools: Fix thread-unsafe call to MessageManager::write() | 4.8 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |